add api routes, rules and all the stuff that is needed
